Wed Sep  4 11:34:59 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Documentation/readme.texi: Fixed typo - it's the "GNU General
	Public License", not the "GNU Public License" (Reported by David
	Ayers <d.ayers@inode.at>).
	* README: Regenerated.
	
2002-08-30  Adam Fedor  <fedor@gnu.org>

	* Version: 1.5.0

2002-08-26  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Typo in CPPFLAGS (Reported by Chris Vetter).

2002-08-24  Adam Fedor  <fedor@gnu.org>

	* Documentation/README.MinGW: Update.

2002-08-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Save user suplied CPPFLAGS, use INCLUDE_FLAGS
	instead (goes into CONFIG_SYSTEM_INCL).
	* config.make.in (CPPFLAGS): Subst with CPPFLAGS
	(CONFIG_SYSTEM_INCL): Subst with INCLUDE_FLAGS.

Fri Aug  9 11:15:26 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Patch from Peter Cooper <comrade@obverse.com.au> with minor
	modifications:
	* target.make: Updated netbsdelf code.  In particular,
	LIBRARIES_DEPEND_UPON should now work for netbsdelf.
	* configure.ac: Updated netbsdelf code.
	* conigure: Regenerated.
	
2002-08-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Instance/documentation.make: Order autogsdoc flags so that those
	from the user makefiles override the default values we supply.

2002-08-01  Adam Fedor  <fedor@gnu.org>

	* target.make (Darwin): Don't add flags if using
	NeXT Foundation.

2002-07-29  Adam Fedor  <fedor@gnu.org>

	* Changes from 1.4.0 merged into main branch.

2002-07-27  Adam Fedor  <fedor@gnu.org>

	* Version: 1.4.0

Wed Jul 24 16:31:14 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* debian/: Outdated directory removed - the debian maintainers are
	maintaining the updated one elsewhere.  (Suggested by Matthias
	Klose <doko@cs.tu-berlin.de>).

Mon Jul 22 12:34:49 2002  Georg Fleischmann <georg@vhf.de>

	* Instance/Shared/bundle.make (shared-instance-bundle-all):
	Copying of localized resources from subprojects with multiple
	languages corrected.

2002-07-21  Adam Fedor  <fedor@gnu.org>
