@@ -1,3 +1,12 @@
+Thu Sep 12 10:23:19 2002  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* openapp.in: Implemented calling openapp with an application name
+	without prefix, as in 'openapp Gorm': openapp will automatically
+	look for Gorm.app or Gorm.debug or Gorm.profile.  Implemented
+	support for searching applications in subdirectories of
+	Applications - only subdirs one level deep are supported.  Other
+	simple cleanups such as quoting of variables.
+
 Wed Sep  4 11:34:59 2002  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Documentation/readme.texi: Fixed typo - it's the "GNU General
